[package]
name = "backplane"
version = "0.0.2"
authors = ["nsmryan <nsmryan@gmail.com>"]
edition = "2018"
description = "Backplane provides tools for moving data between common interfaces"
repository = "https://github.com/nsmryan/backplane"
keywords=["networking", "tools", "cli"]
homepage =  "https://github.com/nsmryan/backplane"
license = "MIT"

[lib]
name = "backplane"
path = "src/lib.rs"

[[bin]]
name = "backplane"
path = "src/main.rs"

[dependencies]
bytes = "0.4"

serde        = "1.0"
serde_json   = "1.0"
serde_derive = "1.0"

num        = "0.2"
num-traits = "0.2"
num-derive = "0.2"

clap = "2.32.0"
